# pybites

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
pybites/: pybite_128.py  pybite_67.py  pybite_7.py
tests/: test_pybite7.py  test_pybite_128.py  test_pybite_67.py  test_pybite_7.py
