[tool.poetry]
name = "pybites"
version = "0.1.0"
description = "pybites code challenges."
authors = ["James DeHart <jamesd.dehart@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pre-commit = "^2.6.0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
